--- a/TelerikTest/TelerikTest.csproj
+++ b/TelerikTest/TelerikTest.csproj
@@ -215,6 +215,9 @@
     <Compile Include="MailMessage.Designer.cs">
       <DependentUpon>MailMessage.cs</DependentUpon>
     </Compile>
+    <Compile Include="PerPixelAlphaForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RadForm1.cs">
@@ -342,6 +345,8 @@
   <ItemGroup>
     <Content Include="launcher_Icon1.ico" />
     <None Include="Resources\trash_files.jpg" />
+    <None Include="Resources\LoadingNotice.png" />
+    <None Include="Resources\LoadingNoticeOrig.png" />
     <Content Include="roket_2715x1697.ico" />
     <Content Include="run_3132.ico" />
     <None Include="Resources\mail_replayall_2860.bmp" />
