--- a/TelerikTest/packages.config
+++ b/TelerikTest/packages.config
@@ -2,17 +2,21 @@
 <packages>
   <package id="b2xtranslator" version="1.0.0" targetFramework="net472" />
   <package id="b2xtranslator.doc" version="1.0.1" targetFramework="net472" />
+  <package id="cef.redist.x64" version="92.0.25" targetFramework="net472" />
+  <package id="cef.redist.x86" version="92.0.25" targetFramework="net472" />
+  <package id="CefSharp.Common" version="92.0.251" targetFramework="net472" />
+  <package id="CefSharp.WinForms" version="92.0.251" targetFramework="net472" />
   <package id="DotNetCore.NPOI" version="1.2.3" targetFramework="net472" />
   <package id="DotNetCore.NPOI.Core" version="1.2.3" targetFramework="net472" />
   <package id="DotNetCore.NPOI.OpenXml4Net" version="1.2.3" targetFramework="net472" />
   <package id="DotNetCore.NPOI.OpenXmlFormats" version="1.2.3" targetFramework="net472" />
-  <package id="MailKit" version="2.13.0" targetFramework="net472" />
+  <package id="MailKit" version="2.14.0" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1003" targetFramework="net472" />
-  <package id="MimeKit" version="2.13.0" targetFramework="net472" />
-  <package id="NPOI" version="2.5.3" targetFramework="net472" />
+  <package id="MimeKit" version="2.14.0" targetFramework="net472" />
+  <package id="NPOI" version="2.5.4" targetFramework="net472" />
   <package id="Portable.BouncyCastle" version="1.8.10" targetFramework="net472" />
-  <package id="SharpZipLib" version="1.2.0" targetFramework="net472" />
+  <package id="SharpZipLib" version="1.3.2" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Drawing.Common" version="5.0.2" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
